created report generated from kafka listener

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:h2:mem:sales_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.port=8085
+#Kafka listener config
+kafka.bootstrap-servers=localhost:9092
+kafka.consumer.group-id=report
+kafka.topic.order-creation=orders.created
 
