added db and swagger props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ kafka.bootstrap-servers=localhost:9092
 kafka.consumer.group-id=report
 kafka.topic.order-creation=orders.created
 
+# DB URL= http://localhost:8085/h2-console/login.jsp?jsessionid=6d0bb785fc3016bb4ac720501d18229d
+# swagger url : http://localhost:8085/swagger-ui/index.html#/
